--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+    "globals": {
+        "Handlebars": false
+      },
+    
     "env": {
         "browser": true,
         "es6": true
@@ -30,4 +34,5 @@
             "off"
         ]
     }
+    
 }
